--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="description" content="" />
   <meta name="keywords" content="" />
   <meta name="robots" content="index, follow" />
+  <script src="js/html5.js"></script>
   <script>document.documentElement.className += " js";</script>
 </head>
 
