updated meta charset element to new HTML5 syntax

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta charset="utf-8" />
   <title>Kickstart Page Title</title>
   <link href="css/screen.css" rel="stylesheet" media="screen" type="text/css" />
   <link href="css/print.css" rel="stylesheet" media="print" type="text/css" />
