--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
   <!-- Content goes here -->
 
-  <script src="js/jquery-1.4.2.min.js"></script>
-  <script src="js/fancybox-1.3.1.min.js"></script>
+  <script src="js/jquery-1.5.min.js"></script>
+  <script src="js/jquery.fancybox-1.3.4.pack.js"></script>
   <script src="js/domscript.js"></script>
   <script>jQuery(dom_init);</script>
 </body>
