--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <meta name="robots" content="index, follow" />
   <script src="js/html5.js"></script>
   <script>document.documentElement.className += " js";</script>
+  <link rel="shortcut icon" href="img/favicon.ico" type="image/vnd.microsoft.icon" /> 
 </head>
 
 <!--[if lt IE 7]><body class="ie7 ie6"><![endif]-->
