--- a/index.html
+++ b/index.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
 <head>
   <meta charset="utf-8" />
   <title>Kickstart Page Title</title>
+  
   <link href="css/screen.css" rel="stylesheet" media="screen" type="text/css" />
   <link href="css/print.css" rel="stylesheet" media="print" type="text/css" />
+  
   <meta name="description" content="" />
   <meta name="keywords" content="" />
   <meta name="robots" content="index, follow" />
-  <script src="js/html5.js"></script>
+  
+  <script src="js/iepp.js"></script>
+  <script src="js/jquery-1.7.min.js"></script>
+  <script src="js/jquery.fancybox-1.3.4.pack.js"></script>
+  <script src="js/domscript.js"></script>
   <script>document.documentElement.className += " js";</script>
-  <link rel="shortcut icon" href="img/favicon.ico" type="image/vnd.microsoft.icon" /> 
+  
+  <link rel="shortcut icon" href="img/favicon.ico" type="image/vnd.microsoft.icon" />
 </head>
 
 <!--[if lt IE 7]><body class="ie7 ie6"><![endif]-->
@@ -18,11 +25,10 @@
 <!--[if gt IE 7]><body><![endif]-->
 <!--[if !IE]><!--><body><!-- <![endif]-->
 
+
   <!-- Content goes here -->
 
-  <script src="js/jquery-1.6.1.min.js"></script>
-  <script src="js/jquery.fancybox-1.3.4.pack.js"></script>
-  <script src="js/domscript.js"></script>
+  
   <script>jQuery(dom_init);</script>
 </body>
 </html>
