--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <meta name="robots" content="index, follow" />
   
   <script src="js/html5shiv.js"></script>
-  <script src="js/jquery-1.7.1.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script>window.jQuery || document.write('<script src="js/jquery-1.7.1.min.js"><\/script>')</script>
   <script src="js/jquery.fancybox-1.3.4.pack.js"></script>
   <script src="js/domscript.js"></script>
   <script>document.documentElement.className += " js";</script>
