--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
   <link href="css/print.css" rel="stylesheet" media="print" type="text/css" />
   
   <meta name="description" content="" />
-  <meta name="keywords" content="" />
   <meta name="robots" content="index, follow" />
   
   <script src="js/html5shiv.js"></script>
   <script src="js/jquery-1.7.1.min.js"></script>
-  <script src="js/jquery.fancybox-1.3.4.pack.js"></script>
+  <!--<script src="js/zepto.js"></script>-->  <!-- lightweight alternative to jQuery -->
   <script src="js/domscript.js"></script>
   <script>document.documentElement.className += " js";</script>
   
@@ -29,6 +28,5 @@
   <!-- Content goes here -->
 
   
-  <script>jQuery(dom_init);</script>
 </body>
 </html>
