--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 	<meta name="robots" content="index, follow" />
 	
 	<script src="js/html5shiv.js"></script>
-	<script src="js/jquery-1.7.2.min.js"></script>
+	<script src="js/jquery-1.9.0.min.js"></script>
 	<!--<script src="js/zepto.js"></script>-->  <!-- lightweight alternative to jQuery -->
 	<script src="js/domscript.js"></script>
 	<script>document.documentElement.className += " js";</script>
+	<!-- <meta content="minimum-scale=1.0, width=device-width" name="viewport"> -->
 	
 	<link rel="shortcut icon" href="img/favicon.ico" type="image/vnd.microsoft.icon" />
 </head>
