fix initial scale

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 	<link href="css/print.css" rel="stylesheet" media="print" type="text/css" />
 	
 	<meta name="description" content="" />
-	<meta name="robots" content="index, follow" />
+	<!-- <meta name="robots" content="index, follow" /> -->
 	
 	<script src="js/html5shiv.js"></script>
-	<script src="js/jquery-1.9.0.min.js"></script>
-	<!--<script src="js/zepto.js"></script>-->  <!-- lightweight alternative to jQuery -->
+	<script src="js/jquery-1.9.1.min.js"></script>
+	<!-- <script src="js/zepto.js"></script> -->  <!-- lightweight alternative to jQuery -->
 	<script src="js/domscript.js"></script>
 	<script>document.documentElement.className += " js";</script>
-	<!-- <meta content="minimum-scale=1.0, width=device-width" name="viewport"> -->
+	<!-- <meta content="minimum-scale=1.0, width=device-width, initial-scale=1" name="viewport"> -->
 	
 	<link rel="shortcut icon" href="img/favicon.ico" type="image/vnd.microsoft.icon" />
 </head>
