--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 	<!-- <meta name="robots" content="index, follow" /> -->
 	
 	<script src="js/html5shiv.js"></script>
-	<script src="js/jquery-1.9.1.min.js"></script>
+	<script src="js/jquery-1.10.2.min.js"></script>
+	<!-- <script src="js/jquery-2.0.3.min.js"></script> -->  <!-- doesn’t do IE6, IE7, IE8 -->
 	<!-- <script src="js/zepto.js"></script> -->  <!-- lightweight alternative to jQuery -->
 	<script src="js/domscript.js"></script>
 	<script>document.documentElement.className += " js";</script>
