brand new version
more content-box, subhead element and updated libraries.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
+	<meta content="width=device-width, initial-scale=1" name="viewport">
+	
 	<title>Kickstart Page Title</title>
 	
 	<link href="css/screen.css" rel="stylesheet" media="screen" type="text/css" />
@@ -10,20 +12,19 @@
 	<meta name="description" content="" />
 	<!-- <meta name="robots" content="index, follow" /> -->
 	
-	<script src="js/html5shiv.js"></script>
-	<script src="js/jquery-1.10.2.min.js"></script>
-	<!-- <script src="js/jquery-2.0.3.min.js"></script> -->  <!-- doesn’t do IE6, IE7, IE8 -->
-	<!-- <script src="js/zepto.js"></script> -->  <!-- lightweight alternative to jQuery -->
+	<script src="js/html5shiv-3.7.2.js"></script>
+	<script src="js/jquery-1.11.2.min.js"></script>
+	<!-- <script src="js/jquery-2.1.3.min.js"></script> -->  <!-- doesn’t do IE6, IE7, IE8 -->
+	<!-- <script src="js/zepto-1.1.6.min.js.js"></script> -->  <!-- lightweight alternative to jQuery -->
 	<script src="js/domscript.js"></script>
 	<script>document.documentElement.className += " js";</script>
-	<!-- <meta content="minimum-scale=1.0, width=device-width, initial-scale=1" name="viewport"> -->
+	
 	
 	<link rel="shortcut icon" href="img/favicon.ico" type="image/vnd.microsoft.icon" />
 </head>
 
-<!--[if lt IE 7]><body class="ie7 ie6"><![endif]-->
-<!--[if IE 7]><body class="ie7"><![endif]-->
-<!--[if gt IE 7]><body><![endif]-->
+<!--[if IE 8]><body class="ie8"><![endif]-->
+<!--[if IE 9]><body class="ie9"><![endif]-->
 <!--[if !IE]><!--><body><!-- <![endif]-->
 
 
